2007-01-26  Brian Gough  <bjg@network-theory.co.uk>

	* minmax_source.c: added support for NaNs

2006-10-31  Brian Gough  <bjg@network-theory.co.uk>

	* prop_source.c (FUNCTION): added functions gsl_matrix_ispos,
	gsl_matrix_isneg

2003-01-01  Brian Gough  <brian.gough@network-theory.co.uk>

	* gsl_matrix_complex_float.h (gsl_matrix_complex_float_get):
	removed const from zero

	* matrix_source.c (FUNCTION): removed const from zero

2002-11-24  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am: added libgslsys.a to link, to provide gsl_hypot for
	complex division

Mon Jun 17 22:31:33 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test_complex_source.c (FUNCTION): fixed non-constant initializer

Wed May  1 21:33:44 2002  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_matrix_complex_float.h (gsl_matrix_complex_float_get): moved
 	constant zero inside GSL_RANGE_CHECK_OFF

Sun Mar 24 20:28:48 2002  Brian Gough  <bjg@network-theory.co.uk>

	* oper_complex_source.c: complex matrix operations (from Toby
 	White)
	
Mon Feb 18 20:33:58 2002  Brian Gough  <bjg@network-theory.co.uk>

	* copy_source.c (gsl_matrix_swap): fixed prototype by removing
 	const from second arg.

Sun Jan 27 22:29:37 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: ensure that range check is working when running the
 	tests

Fri Sep 14 18:56:34 2001  Brian Gough  <bjg@network-theory.co.uk>

	* view_source.c: fixed cast for array type

	* view.c: added #includes for missing const qualified types

	* view_source.c: error for non-unit strides

Fri Aug  3 14:11:23 2001  Brian Gough  <bjg@network-theory.co.uk>

	* added gsl_matrix_ptr and gsl_matrix_const_ptr functions

Mon Jul 16 21:28:05 2001  Brian Gough  <bjg@network-theory.co.uk>

	* rowcol_source.c (FUNCTION): initialized view to NULL

Fri Jul 13 21:29:27 2001  Brian Gough  <bjg@network-theory.co.uk>

	* changed views to be structs and used casts to initialize them

Mon Jul  2 12:35:16 2001  Brian Gough  <bjg@network-theory.co.uk>
